--- a/Homework12/Homework12.vcxproj
+++ b/Homework12/Homework12.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Bucket.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="IntersectionData.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AABB.h" />
     <ClInclude Include="Bucket.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Color.h" />
