Made basic UI window for Final Project and made Animation Segment class for interpolating the animation frames

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /Homework11/x64
 /Homework12/x64
 /Homework13/x64
+/Homework10/.vs
+/Homework11/.vs
+/Homework12/.vs
+/Homework13/.vs
+/FinalProjectChaos/x64
+/FinalProjectChaos/FinalPro.1B4AF1FC
+/FinalProjectChaos/.vs
