Added frame previewing and animation sequence generator to Final Project

--- a/FinalProjectChaos/FinalProjectChaos.vcxproj
+++ b/FinalProjectChaos/FinalProjectChaos.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Ray.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="stb_image.h" />
