Created Project for all DX homeworks to upgrade rather than creating new project every homework. Added DX functions in a seperate class

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ ChaosHomeworksPart1/Homework13/.vs
 /FinalProjectChaos/x64
 /FinalProjectChaos/FinalPro.1B4AF1FC
 /FinalProjectChaos/.vs
+
+ChaosHomeworksPart2\DirectXHomeworksProject\DirectXH.a0236926
+ChaosHomeworksPart2\DirectXHomeworksProject\x64
+ChaosHomeworksPart2\DirectXHomeworksProject\.vs
